[package]
name = "pressakey"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/quendimax/pressakey"
authors = ["Maksim Tomkavich <quendimax@gmail.com>"]

description = " Crossplatform terminall app to wait until a user press a key "
keywords = ["terminal"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1"

[dependencies.crossterm]
version = "0.29"
default-features = false
features = ["events"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
